# controller/game_controller.go
@@ -7,12 +7,12 @@ import (
 	"context"
 )
 
-// (GET /users/{userId}/games/current)
-func (Server) GetCurrentGame(ctx context.Context, request api.GetCurrentGameRequestObject) (api.GetCurrentGameResponseObject, error) {
+// GetCurrentGame (GET /users/{userId}/games/current)
+func (Server) GetCurrentGame(_ context.Context, request api.GetCurrentGameRequestObject) (api.GetCurrentGameResponseObject, error) {
 	doesUserExist, err := user_service.CheckIfUserExistsById(request.UserId)
 
 	if err != nil {
-		return api.GetCurrentGame503JSONResponse{api.DATABASEQUERY, err.Error()}, nil
+		return api.GetCurrentGame503JSONResponse{Code: api.CHECKUSER, Message: err.Error()}, nil
 	}
 
 	if !*doesUserExist {
@@ -22,7 +22,7 @@ func (Server) GetCurrentGame(ctx context.Context, request api.GetCurrentGameRequ
 	game, err := game_service.GetCurrentGame(request.UserId)
 
 	if err != nil {
-		return api.GetCurrentGame503JSONResponse{api.DATABASEQUERY, err.Error()}, nil
+		return api.GetCurrentGame503JSONResponse{Code: api.GETCURRENTGAME, Message: err.Error()}, nil
 	}
 
 	if game == nil {
@@ -32,22 +32,22 @@ func (Server) GetCurrentGame(ctx context.Context, request api.GetCurrentGameRequ
 	return api.GetCurrentGame200JSONResponse(*game), nil
 }
 
-// (GET /users/{userId}/games/current/finish)
-func (Server) FinishCurrentGame(ctx context.Context, request api.FinishCurrentGameRequestObject) (api.FinishCurrentGameResponseObject, error) {
+// FinishCurrentGame (GET /users/{userId}/games/current/finish)
+func (Server) FinishCurrentGame(_ context.Context, request api.FinishCurrentGameRequestObject) (api.FinishCurrentGameResponseObject, error) {
 	return api.FinishCurrentGame200Response{}, nil
 }
 
-// (GET /users/{userId}/games/roll)
-func (Server) MakeGameRoll(ctx context.Context, request api.MakeGameRollRequestObject) (api.MakeGameRollResponseObject, error) {
+// MakeGameRoll (GET /users/{userId}/games/roll)
+func (Server) MakeGameRoll(_ context.Context, request api.MakeGameRollRequestObject) (api.MakeGameRollResponseObject, error) {
 	return api.MakeGameRoll200JSONResponse{}, nil
 }
 
-// (GET /users/{userId}/games/unplayed)
-func (Server) GetUnplayedGames(ctx context.Context, request api.GetUnplayedGamesRequestObject) (api.GetUnplayedGamesResponseObject, error) {
+// GetUnplayedGames (GET /users/{userId}/games/unplayed)
+func (Server) GetUnplayedGames(_ context.Context, request api.GetUnplayedGamesRequestObject) (api.GetUnplayedGamesResponseObject, error) {
 	doesUserExist, err := user_service.CheckIfUserExistsById(request.UserId)
 
 	if err != nil {
-		return api.GetUnplayedGames503JSONResponse{api.DATABASEQUERY, err.Error()}, nil
+		return api.GetUnplayedGames503JSONResponse{Code: api.CHECKUSER, Message: err.Error()}, nil
 	}
 
 	if !*doesUserExist {
@@ -57,18 +57,18 @@ func (Server) GetUnplayedGames(ctx context.Context, request api.GetUnplayedGames
 	games, err := game_service.GetUnplayedGames(request.UserId)
 
 	if err != nil {
-		return api.GetUnplayedGames503JSONResponse{api.DATABASEQUERY, err.Error()}, nil
+		return api.GetUnplayedGames503JSONResponse{Code: api.GETUNPLAYEDGAMES, Message: err.Error()}, nil
 	}
 
 	return api.GetUnplayedGames200JSONResponse(*games), nil
 }
 
-// (POST /users/{userId}/games/unplayed)
-func (Server) AddUnplayedGames(ctx context.Context, request api.AddUnplayedGamesRequestObject) (api.AddUnplayedGamesResponseObject, error) {
+// AddUnplayedGames (POST /users/{userId}/games/unplayed)
+func (Server) AddUnplayedGames(_ context.Context, request api.AddUnplayedGamesRequestObject) (api.AddUnplayedGamesResponseObject, error) {
 	doesUserExist, err := user_service.CheckIfUserExistsById(request.UserId)
 
 	if err != nil {
-		return api.AddUnplayedGames503JSONResponse{api.DATABASEQUERY, err.Error()}, nil
+		return api.AddUnplayedGames503JSONResponse{Code: api.CHECKUSER, Message: err.Error()}, nil
 	}
 
 	if !*doesUserExist {
@@ -78,7 +78,7 @@ func (Server) AddUnplayedGames(ctx context.Context, request api.AddUnplayedGames
 	err = game_service.AddUnplayedGames(request.UserId, request.Body)
 
 	if err != nil {
-		return api.AddUnplayedGames503JSONResponse{api.DATABASEQUERY, err.Error()}, nil
+		return api.AddUnplayedGames503JSONResponse{Code: api.ADDUNPLAYEDGAMES, Message: err.Error()}, nil
 	}
 
 	return api.AddUnplayedGames200Response{}, nil
